# wexp

./: Cargo.toml  README.md  Trunk.toml  build.sh  debug.sh  index.html  release.sh  rustfmt.toml
src/: camera.rs  lib.rs  main.rs  shader.wgsl  texture_resource.rs
