[package]
name = "wexp"
version = "0.1.0"
edition = "2021"

# [build]
# target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib", "rlib"]
# target = "wasm32-unknown-unknown"

[dependencies]
# cfg-if = "1"
winit = "0.26"
env_logger = "0.9"
log = "0.4"
bytemuck = { version = "1.4", features = [ "derive" ] }
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.12" }
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element", 

    # Image loading support
    "Request",
    "RequestInit",
    "RequestMode",
    "Headers",
    "Response",
    "ImageBitmap",
    "Blob"
]}
js-sys = "0.3.57"
cgmath = "0.18"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

